hrservicecenter/force-app/main/default/objects/OnboardingTask__c/OnboardingTask__c.object-meta.xml
<CustomObject>
    <description>This entity represents various onboarding tasks an HR can create for their employees.</description>
    <label>Onboarding Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>