hrservicecenter/force-app/main/default/objects/OnboardingTask__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description about the task</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>