hrservicecenter/force-app/main/default/objects/OnboardingTask__c/fields/FlowAPIName__c.field-meta.xml
<CustomField>
    <fullName>FlowAPIName__c</fullName>
    <description>API name of the flow associated with this task. All onboarding tasks must reference a flow.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>